# EduWorld

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build-binaries.sh  tauri.conf.json
src-tauri/binaries/: hello.asm  hello.js  hello.lua  hello.php  hello.pl  hello.py  hello.r  hello.rb  hello.sh  hello.ts  hello_rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
