[package]
name = "hello-world-explorer"
version = "0.1.0"
description = "Hello World Deep Dive Explorer"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hello_world_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hello-world-explorer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
